--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="update_state">Actualizar Estado</string>
     <string name="msg_update_service_state_failed">Ocurrio un problema al actualizar el estado del servicio.</string>
     <string name="msg_update_service_state_success">El cliente ha sido notificado exitosamente.</string>
+    <string name="msg_error_occurred">There was a connection error.</string>
 
 
     <string-array name="states_accepted">
@@ -60,5 +61,28 @@
     </string-array>
     <string name="title_activity_blanck">BlanckActivity</string>
     <string name="msg_assign_service_already_taken">This service was already assigned to another driver.</string>
+    <string name="msg_empty_services">You don\'t have any pending services.</string>
+    <string name="empty_services">Empty Services</string>
+    <string name="msg_send_alarm">Send ALARM  request</string>
+    <string name="msg_alarm_acive">¡You are now in ALARM state!</string>
+    <string name="cancel">cancel</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">Settings</string>
+    <string name="forgot_password">Forgot your password ?</string>
+    <string name="welcome">Welcome</string>
+    <string name="select_vehicle">Please select the vehicle that will drive today.</string>
+    <string name="next">Continuar</string>
+
+
+    <string-array name="plates">
+        <item>ABC 123</item>
+        <item>ABC 123</item>
+        <item>ABC 123</item>
+        <item>Completed</item>
+    </string-array>
 
 </resources>
